objects/SPARequest__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account Name for which the SPA is created. The value is pre-defaulted of the Opportunity Account but can be overwritten with an other Account (eg a distributor)</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SPA Requests</relationshipLabel>
        <relationshipName>SPA_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approval in Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SPARequestsApprover1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SPARequestsApprover2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SPARequestsApprover3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BackOfficeContractNumber__c</fullName>
        <description>Contract Id from the Legacy System</description>
        <inlineHelpText>Contract Id from the Legacy System</inlineHelpText>
        <label>Back Office Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackOfficeCustomerNumber__c</fullName>
        <description>Account Id from the Legacy System (recorded in the bFO Account Legacy section)</description>
        <inlineHelpText>Account Id from the Legacy System (recorded in the bFO Account Legacy section)</inlineHelpText>
        <label>Back Office Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackOfficeSystemID__c</fullName>
        <description>Name of the Legacy system where Orders are created</description>
        <inlineHelpText>Name of the Legacy system where Orders are created</inlineHelpText>
        <label>Back Office System ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HK_SAP</fullName>
                </value>
                <value>
                    <fullName>NL_SAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChannelContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SPA Requests (Channel Contact)</relationshipLabel>
        <relationshipName>SPA_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChannelLegacyNumber__c</fullName>
        <label>Back Office Channel Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Capture the Channel Account. Use for Indirect Sales when the Account purchase through 3rd party like a distributor or reseller</inlineHelpText>
        <label>Channel</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SPA Requests As Channel</relationshipLabel>
        <relationshipName>SPARequests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CheckDoubleDiscount__c</fullName>
        <formula>HYPERLINK(IF($User.Country=&apos;NL&apos;,(&quot;/lightning/r/Report/00OA0000005cYhv/view?fv0=&quot;+Account__c+&quot;&amp;fv1=&quot;+Account__c+&quot;&amp;fv2=&quot;+Account__c+&quot;&amp;fv3=&quot;+(TEXT(DAY(StartDate__c))+&quot;-&quot;+TEXT(MONTH(StartDate__c))+&quot;-&quot;+TEXT(YEAR(StartDate__c)))+&quot;&amp;fv4=&quot;+(TEXT(DAY(EndDate__c))+&quot;-&quot;+TEXT(MONTH(EndDate__c))+&quot;-&quot;+TEXT(YEAR(EndDate__c)))+&quot;&amp;fv5=&quot;+(TEXT(DAY(EndDate__c))+&quot;-&quot;+TEXT(MONTH(EndDate__c))+&quot;-&quot;+TEXT(YEAR(EndDate__c)))+&quot;&amp;fv10=&quot;+REP_UltimateParentAccount__c+
&quot;&amp;fv11=&quot;+REP_UltimateParentChannel__c+&quot;&amp;fv12=&quot;+REP_UltimateParentAccount__c+&quot;&amp;fv13=&quot;+REP_UltimateParentAccount__c+&quot;&amp;fv14=&quot;+REP_UltimateParentChannel__c+&quot;&amp;fv15=&quot;+REP_UltimateParentAccount__c+&quot;&amp;fv16=&quot;+REP_UltimateParentChannel__c+&quot;&amp;fv17=&quot;+REP_UltimateParentAccount__c+ 
&quot;&amp;fv18=&quot;+IF(ISPICKVAL(BackOfficeSystemID__c,&apos;NL_SAP&apos;),&apos;NL_SAP&apos;,&apos;HK_SAP&apos;)+&quot;&amp;fv19=&quot;+Account__c),(&quot;/lightning/r/Report/00OA0000005cYhv/view?fv0=&quot;+Account__c+&quot;&amp;fv1=&quot;+Account__c+&quot;&amp;fv2=&quot;+Account__c+&quot;&amp;fv3=&quot;+(TEXT(DAY(StartDate__c))+&quot;%2F&quot;+TEXT(MONTH(StartDate__c))+&quot;%2F&quot;+TEXT(YEAR(StartDate__c)))+&quot;&amp;fv4=&quot;+(TEXT(DAY(EndDate__c))+&quot;%2F&quot;+TEXT(MONTH(EndDate__c))+&quot;%2F&quot;+TEXT(YEAR(EndDate__c)))+&quot;&amp;fv5=&quot;+(TEXT(DAY(EndDate__c))+&quot;%2F&quot;+TEXT(MONTH(EndDate__c))+&quot;%2F&quot;+TEXT(YEAR(EndDate__c)))+&quot;&amp;fv10=&quot;+REP_UltimateParentAccount__c+
&quot;&amp;fv11=&quot;+REP_UltimateParentChannel__c+&quot;&amp;fv12=&quot;+REP_UltimateParentAccount__c+&quot;&amp;fv13=&quot;+REP_UltimateParentAccount__c+&quot;&amp;fv14=&quot;+REP_UltimateParentChannel__c+&quot;&amp;fv15=&quot;+REP_UltimateParentAccount__c+&quot;&amp;fv16=&quot;+REP_UltimateParentChannel__c+&quot;&amp;fv17=&quot;+REP_UltimateParentAccount__c+ 
&quot;&amp;fv18=&quot;+IF(ISPICKVAL(BackOfficeSystemID__c,&apos;NL_SAP&apos;),&apos;NL_SAP&apos;,&apos;HK_SAP&apos;)+&quot;&amp;fv19=&quot;+Account__c)),&quot;Click here to display the report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Double Discount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact of the Account</inlineHelpText>
        <label>Account Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Consumer Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SPA Requests</relationshipLabel>
        <relationshipName>SPARequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerPricingGroup__c</fullName>
        <description>Customer Pricing Group Name from the Legacy System</description>
        <inlineHelpText>Customer Pricing Group Name from the Legacy System</inlineHelpText>
        <label>Customer Pricing Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateofFirstSubmissionforApproval__c</fullName>
        <label>Date of First Submission for Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateofLastApprovalRejection__c</fullName>
        <label>Date of Last Approval / Rejection</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DaysBetweenStartAndCreatedDate__c</fullName>
        <formula>StartDate__c - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Between Start And Created Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DealSize__c</fullName>
        <inlineHelpText>Total Amount of the SPA in List Price (Price without any discount)</inlineHelpText>
        <label>Deal Size (Total Price List)</label>
        <summarizedField>SPARequestLineItem__c.ListPriceLineAmount__c</summarizedField>
        <summaryForeignKey>SPARequestLineItem__c.SPARequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DoNotSendLetter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>NL only: if this field is checked, the Price Agreement will NOT be communicated to the customer.</inlineHelpText>
        <label>Do not send letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>End Date of the Special Price Agreement with the Account</description>
        <inlineHelpText>End Date of the Special Price Agreement with the Account</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExceptionInformations__c</fullName>
        <label>Exception Informations</label>
        <length>32500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InitialEndDate__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsMixedDiscount__c</fullName>
        <formula>IF(IF( TECH_CountOfAdditionalDiscountLines__c &gt;= 1, 1, 0) + 
IF(TECH_CountOfAdvisedDiscountLines__c &gt;= 1, 1, 0) + 
IF(TECH_CountOfFinalMultiplierLines__c  &gt;= 1, 1, 0) + 
IF( TECH_CountOfNetPriceLines__c &gt;= 1, 1,0) &gt; 1, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Mixed Discount?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetAmount__c</fullName>
        <description>Total Net Amount of the SPA including all discounts (standard + additional)</description>
        <inlineHelpText>Total Net Amount of the SPA including all discounts (standard + additional)</inlineHelpText>
        <label>Total Net Amount</label>
        <summarizedField>SPARequestLineItem__c.NetLineAmount__c</summarizedField>
        <summaryForeignKey>SPARequestLineItem__c.SPARequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NetDiscountAmount__c</fullName>
        <description>Amount of Quota which will be deducted of the Sales Group (= Standard Price - Net Price)</description>
        <inlineHelpText>Amount of Quota which will be deducted of the Sales Group (= Standard Price - Net Price)</inlineHelpText>
        <label>Quota Deducted</label>
        <summarizedField>SPARequestLineItem__c.NetDiscountAmount__c</summarizedField>
        <summaryForeignKey>SPARequestLineItem__c.SPARequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SPA Requests</relationshipLabel>
        <relationshipName>SPARequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuotaExceeded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if the SPA is exceeded the Quota for the Quater period</description>
        <inlineHelpText>Indicate if the SPA is exceeded the Quota for the Quater period</inlineHelpText>
        <label>Quota Exceeded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REP_CurrentApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Current Approver of SPA Request</description>
        <label>REP_CurrentApprover</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SPA_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REP_OriginalSPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>REP_Original SPA</label>
        <referenceTo>SPARequest__c</referenceTo>
        <relationshipLabel>SPA Requests</relationshipLabel>
        <relationshipName>SPA_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REP_UltimateParentAccount__c</fullName>
        <formula>Account__r.UltiParentAcc__c</formula>
        <label>REP_Ultimate Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_UltimateParentChannel__c</fullName>
        <formula>Channel__r.UltiParentAcc__c</formula>
        <label>REP_Ultimate Parent Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceForCustomer__c</fullName>
        <label>Reference for customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestedType__c</fullName>
        <description>.The &quot;&quot;Additional Discount&quot;&quot; is applied on the Standard Discount with value in percentage (eg 5,5)
.The &quot;&quot;Final Multiplier&quot;&quot; is applied on the List Price with a decimal value (eg 0,75)
.The &quot;&quot;Net Price&quot;&quot; is the Unit Requested Price for the Account (eg 120,50)</description>
        <inlineHelpText>.The &quot;Additional Discount&quot; is applied on the Standard Discount with value in percentage (eg 5,5)
.The &quot;Final Multiplier&quot; is applied on the List Price with a decimal value (eg 0,75)
.The &quot;Net Price&quot; is the Unit Requested Price for the Account (eg 120,50)</inlineHelpText>
        <label>Requested Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Multiplier</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Advised Discount %</fullName>
                </value>
                <value>
                    <fullName>Standard Discount</fullName>
                </value>
                <value>
                    <fullName>Free of charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequiredApprovalLevel__c</fullName>
        <label>Required Approval Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SPAQuotaQuarter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPA Quota Quarter</label>
        <referenceTo>SPAQuotaQuarter__c</referenceTo>
        <relationshipLabel>SPA Requests</relationshipLabel>
        <relationshipName>SPARequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPAQuota__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPA Quota</label>
        <referenceTo>SPAQuota__c</referenceTo>
        <relationshipLabel>SPA Requests</relationshipLabel>
        <relationshipName>SPA_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPAReason__c</fullName>
        <label>SPA Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-off Promotion</fullName>
                    <label>Promotion</label>
                </value>
                <value>
                    <fullName>Repetitive</fullName>
                    <label>Annual SPA</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Mega / Strategic Project</fullName>
                    <label>Opportunity SPA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SPASalesGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Group of the Salesperson where will be deducted the SPA Quota amount (= Standard Price - Net Price)</description>
        <inlineHelpText>Sales Group of the Salesperson where will be deducted the SPA Quota amount (= Standard Price - Net Price)</inlineHelpText>
        <label>SPA Sales Group</label>
        <referenceTo>SPASalesGroup__c</referenceTo>
        <relationshipLabel>SPA Requests</relationshipLabel>
        <relationshipName>SPARequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The SPA Owner</description>
        <inlineHelpText>The SPA Owner</inlineHelpText>
        <label>Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SPA_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Start Date of the Special Price Agreement with the Account</description>
        <inlineHelpText>Start Date of the Special Price Agreement with the Account</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SynchronizationMessage__c</fullName>
        <label>Synchronization Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_ApprovalStep__c</fullName>
        <description>Holds the Approval Step number</description>
        <label>TECH_ApprovalStep</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_CountOfAdditionalDiscountLines__c</fullName>
        <description>Total Count of Additional Discount line items</description>
        <label>TECH_Count Of Additional Discount Lines</label>
        <summaryFilterItems>
            <field>SPARequestLineItem__c.RequestedType__c</field>
            <operation>equals</operation>
            <value>Discount</value>
        </summaryFilterItems>
        <summaryForeignKey>SPARequestLineItem__c.SPARequest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TECH_CountOfAdvisedDiscountLines__c</fullName>
        <description>Total count of Advised Discount % line items</description>
        <label>TECH_Count Of Advised Discount % Lines</label>
        <summaryFilterItems>
            <field>SPARequestLineItem__c.RequestedType__c</field>
            <operation>equals</operation>
            <value>Advised Discount %</value>
        </summaryFilterItems>
        <summaryForeignKey>SPARequestLineItem__c.SPARequest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TECH_CountOfFinalMultiplierLines__c</fullName>
        <description>Total count of Final Multiplier Discount line items</description>
        <label>TECH_Count Of Final Multiplier Lines</label>
        <summaryFilterItems>
            <field>SPARequestLineItem__c.RequestedType__c</field>
            <operation>equals</operation>
            <value>Multiplier</value>
        </summaryFilterItems>
        <summaryForeignKey>SPARequestLineItem__c.SPARequest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TECH_CountOfNetPriceLines__c</fullName>
        <description>Total count of Net Price line items</description>
        <label>TECH_Count Of Net Price Lines</label>
        <summaryFilterItems>
            <field>SPARequestLineItem__c.RequestedType__c</field>
            <operation>equals</operation>
            <value>Price</value>
        </summaryFilterItems>
        <summaryForeignKey>SPARequestLineItem__c.SPARequest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TECH_HasSPARequestLineItem__c</fullName>
        <description>Used in validation rule to prevent users from changing SPA Requested Type if it has atleast one line</description>
        <label>TECH_HasSPARequestLineItem?</label>
        <summaryForeignKey>SPARequestLineItem__c.SPARequest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TECH_ReadyForApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should not be added to the layout, used for validating</description>
        <label>TECH_ReadyForApproval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalDurationofApprovalRejection__c</fullName>
        <formula>IF(AND(NOT(ISNULL(DateofLastApprovalRejection__c)),NOT(ISNULL(DateofFirstSubmissionforApproval__c))),TEXT(FLOOR(DateofLastApprovalRejection__c  -  DateofFirstSubmissionforApproval__c))+&apos;(days)&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Duration of Approval / Rejection</label>
        <type>Text</type>
    </fields>
    <label>SPA Request</label>
    <listViews>
        <fullName>My_SPA_Requests</fullName>
        <columns>NAME</columns>
        <columns>RequestedType__c</columns>
        <columns>ApprovalStatus__c</columns>
        <columns>SPASalesGroup__c</columns>
        <columns>BackOfficeSystemID__c</columns>
        <columns>DealSize__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <filterScope>Mine</filterScope>
        <label>My SPA Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Opzoeken_condities</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>SPAReason__c</columns>
        <columns>Contact__c</columns>
        <columns>Channel__c</columns>
        <columns>ChannelContact__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>InitialEndDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Channel__c</field>
            <operation>contains</operation>
            <value>Elektro Mechanische Groothandel Meerakker B.V.</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>Chronos BTH</value>
        </filters>
        <label>Opzoeken condities</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <nameField>
        <displayFormat>SPA-{YY}{MM}{DD}-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPA Requests</pluralLabel>
    <recordTypes>
        <fullName>SPA_Request_After_Approval_Submission</fullName>
        <active>true</active>
        <label>SPA Request After Approval Submission</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>SharedWithOwnerAndApprover__c</fullName>
        <label>Shared with Owner and Approver</label>
    </sharingReasons>
    <validationRules>
        <fullName>SPA_VR_Jul14SLS01_RequestedTypeChange</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($User.BypassVR__c)&amp;&amp; ISCHANGED(RequestedType__c) &amp;&amp; TECH_HasSPARequestLineItem__c &gt;0</errorConditionFormula>
        <errorMessage>Requested Type cannot be changed for SPA Request with atleast one Line Item</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPA_VR_Jul14SLS02_RequestedTypeMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($User.BypassVR__c)&amp;&amp;  ISBLANK(TEXT(RequestedType__c))</errorConditionFormula>
        <errorMessage>Requested Type is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPA_VR_May13SLS01_OppOrAccMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp; ISBLANK( Account__c ) &amp;&amp; ISBLANK(  Opportunity__c )</errorConditionFormula>
        <errorMessage>Opportunity or Account is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPA_VR_May13SLS02_StartDateBeforeEndDate</fullName>
        <active>true</active>
        <description>Validation rule to ensure that the Start Date is before the End Date</description>
        <errorConditionFormula>AND(NOT($User.BypassVR__c), StartDate__c &gt;= EndDate__c)</errorConditionFormula>
        <errorMessage>Start Date should be before the End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPA_VR_May13SLS03_IEDLessThanED</fullName>
        <active>true</active>
        <description>Validation rule to ensure that the Initial End Date is before the End Date</description>
        <errorConditionFormula>AND(NOT($User.BypassVR__c), NOT ISNULL(InitialEndDate__c), OR( InitialEndDate__c &gt;= EndDate__c, InitialEndDate__c &lt;= StartDate__c ))</errorConditionFormula>
        <errorMessage>Initial End Date should be between the Start Date and End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPA_VR_May14SLS04_ChnlCtcMandatory</fullName>
        <active>true</active>
        <description>Channel Contact mandatory if Channel contains value</description>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp; NOT(ISBLANK( Channel__c )) &amp;&amp; ISBLANK( ChannelContact__c )</errorConditionFormula>
        <errorDisplayField>ChannelContact__c</errorDisplayField>
        <errorMessage>Please enter a Channel Contact</errorMessage>
    </validationRules>
</CustomObject>